# rch-mac

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION.md  PLAN.md  PLAN.md.bak  README.md  apr_auto.py
.apr/: config.yaml
.apr/analytics/rch-mac/: metrics.json
.apr/rounds/rch-mac/: round_1.md  round_10.md  round_11.md  round_12.md  round_13.md  round_14.md  round_15.md  round_16.md  round_17.md  round_18.md  round_19.md  round_2.md  round_20.md  round_21.md  round_22.md  round_23.md  round_3.md  round_4.md  round_5.md  round_6.md  round_7.md  round_8.md  round_9.md
.apr/workflows/: rch-mac.yaml
.beads/: config.yaml  issues.jsonl
.beads/.br_history/: issues.20260211_135752.jsonl
crates/rch-classifier/: Cargo.toml
crates/rch-classifier/src/: config.rs  lib.rs  parser.rs  result.rs
crates/rch-protocol/: Cargo.toml
crates/rch-protocol/src/: error.rs  lib.rs  ops.rs  request.rs  response.rs
crates/rch-protocol/src/ops/: cancel.rs  fetch.rs  probe.rs  reserve.rs  source.rs  status.rs  submit.rs  tail.rs
crates/rch-worker/: Cargo.toml
crates/rch-worker/src/: artifact_commit.rs  config.rs  dispatcher.rs  lib.rs  main.rs  mock_state.rs  probe.rs  reader.rs  rpc.rs  simulator.rs  source_store.rs
crates/rch-worker/src/cache/: derived_data.rs  gc.rs  lock.rs  mod.rs  result.rs  spm.rs  toolchain_key.rs
crates/rch-worker/src/executor/: attestation.rs  manifest.rs  mcp.rs  metrics.rs  mod.rs  summary.rs
crates/rch-worker/src/handlers/: cancel.rs  fetch.rs  has_source.rs  mod.rs  probe.rs  release.rs  reserve.rs  status.rs  submit.rs  tail.rs  upload_source.rs
docs/: apr-operations.md  prompts.md  worker-ssh-setup.md
schemas/rch-xcode/: attestation.schema.json  attestation_verification.schema.json  capabilities.schema.json  destination.schema.json  effective_config.schema.json  invocation.schema.json  job.schema.json  job_index.schema.json  job_key_inputs.schema.json  job_state.schema.json  manifest.schema.json  metrics.schema.json  run_index.schema.json  run_plan.schema.json  run_state.schema.json  run_summary.schema.json  signed_attestation.schema.json  source_manifest.schema.json  summary.schema.json  toolchain.schema.json  worker_selection.schema.json
scripts/: oracle_cdp_recover.js
src/: lib.rs  main.rs  pipeline.rs  timeout.rs
src/artifact/: attestation.rs  gc.rs  indices.rs  manifest.rs  mod.rs  schema.rs  signing.rs  verify.rs
src/bundle/: exclude.rs  manifest.rs  mod.rs
src/cancel/: mod.rs
src/classifier/: config.rs  explain.rs  invocation.rs  mod.rs  parser.rs  policy.rs  result.rs
src/config/: defaults.rs  effective.rs  merge.rs  mod.rs
src/conformance/: mod.rs
src/destination/: mod.rs
src/host/: mod.rs  resumable.rs  rpc.rs  transport.rs
src/inventory/: mod.rs
src/job/: mod.rs
src/mock/: failure.rs  mod.rs  state.rs  worker.rs
src/protocol/: envelope.rs  errors.rs  mod.rs
src/run/: mod.rs  resumption.rs  streaming.rs
src/selection/: mod.rs
src/signal/: mod.rs
src/state/: job_state.rs  mod.rs  run_state.rs
src/summary/: failure.rs  job_summary.rs  mod.rs  run_summary.rs
src/toolchain/: mod.rs
src/worker/: capabilities.rs  executor_env.rs  mod.rs  probe.rs  rpc.rs
tests/: binary_framing.rs  classifier_corpus.rs  conformance.rs  envelope_validation.rs  job_lifecycle.rs  m0_connectivity.rs  m2_integration.rs  m3_mcp_backend_tests.rs  m4_artifact_tests.rs  m5_caching_tests.rs  m6_concurrent_tests.rs  m6_lease_tests.rs  m6_selection_tests.rs  m7_fixture_tests.rs  m7_hardening_tests.rs  m7_resumable_tests.rs  m7_resumable_uploads_tests.rs  protocol_negotiation.rs
tests/fixtures/: mod.rs
tests/fixtures/classifier_corpus/: corpus.json
tests/fixtures/source_bundle/: golden.json
tests/fixtures/source_bundle/MyApp/: AppDelegate.swift  Info.plist  Main.storyboard  ViewController.swift
tests/fixtures/source_bundle/MyApp.xcodeproj/: project.pbxproj
tests/fixtures/source_bundle/MyApp.xcworkspace/: contents.xcworkspacedata
tests/fixtures/source_bundle/MyAppTests/: MyAppTests.swift
