[package]
name = "rch-xcode-lane"
version = "0.1.0"
edition = "2021"
description = "Remote Xcode build/test lane for RCH"
license = "MIT"

[lib]
name = "rch_xcode_lane"
path = "src/lib.rs"

[[bin]]
name = "rch-xcode"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.2"
toml = "0.8"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
walkdir = "2.5"
globset = "0.4"

[dev-dependencies]
tempfile = "3.16"
