[workspace]
members = [
    ".",
    "crates/rch-classifier",
    "crates/rch-protocol",
    "crates/rch-worker",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

[package]
name = "rch-xcode-lane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Remote Xcode build/test lane for RCH"
repository = "https://github.com/example/rch-mac"

[lib]
name = "rch_xcode_lane"
path = "src/lib.rs"

[[bin]]
name = "rch-xcode"
path = "src/main.rs"

[dependencies]
rch-classifier = { path = "crates/rch-classifier" }
rch-protocol = { path = "crates/rch-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = "0.2"
toml = "0.8"
thiserror = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
sha2 = { workspace = true }
hex = { workspace = true }
tar = "0.4"
walkdir = "2.5"
globset = "0.4"
uuid = { version = "1.0", features = ["v4"] }
ulid = "1.2"

[dev-dependencies]
tempfile = "3.16"
