[package]
name = "rch-classifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Deny-by-default classifier for xcodebuild invocations"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
