[package]
name = "rch-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "RCH Xcode Lane worker binary"

[[bin]]
name = "rch-worker"
path = "src/main.rs"

[lib]
name = "rch_worker"
path = "src/lib.rs"

[dependencies]
rch-protocol = { path = "../rch-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
