[package]
name = "rch-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "RCH Xcode Lane worker binary"

[[bin]]
name = "rch-worker"
path = "src/main.rs"

[lib]
name = "rch_worker"
path = "src/lib.rs"

[dependencies]
rch-protocol = { path = "../rch-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex-lite = { workspace = true }
walkdir = { workspace = true }
serde_json_canonicalizer = { workspace = true }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal", "process"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
